Get rid of reflection code in compile-time resource generator